--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+        <title>Hidden-button</title>
+    </head>
+
+    <body>
+        <div class="card text-center">
+            <div class="card-header">Choose a button!</div>
+            <div class="card-body">
+                <button type="button" class="btn btn-info" onclick="checkButton()">1</button>
+                <button type="button" class="btn btn-info" onclick="checkButton()">2</button>
+                <button type="button" class="btn btn-info" onclick="checkButton()">3</button>
+            </div>
+        </div>
+        <script src="script.js"></script>
+    </body>
+</html>
